# cell-kn-mvp-etl-ontologies

./: .gitignore  README.md  RELEASE.md  pom.xml  pyproject.toml
.github/workflows/: release.yml
data/: cell-kn-mvp-collection-maps-2025-04-16.json  cell-kn-mvp-collection-maps-2025-04-17.json  cell-kn-mvp-collection-maps-2025-04-18.json  cell-kn-mvp-collection-maps-2025-04-23.json  cell-kn-mvp-collection-maps.json
docs/python/source/: conf.py  index.rst
src/main/assembly/: bundle.xml
src/main/java/gov/nih/nlm/: App.java  ArangoDbUtilities.java  NodeTypeCounter.java  NodeTypeCounts.java  OntologyDownloader.java  OntologyElementMap.java  OntologyElementParser.java  OntologyGraphBuilder.java  OntologyNodeTypeCounter.java  OntologyNodeTypeCounts.java  OntologyParser.java  OntologyTripleLoader.java  OntologyTripleParser.java  PathUtilities.java  TripleTypeSets.java
src/main/python/: ArangoDbUtilities.py  CellOntology.py  OntologyParserLoader.py
src/main/sh/: .zshenv
src/test/java/gov/nih/nlm/: AppTest.java  ArangoDbUtilitiesTest.java  OntologyDownloaderTest.java  OntologyElementParserTest.java  OntologyGraphBuilderTest.java  OntologyNodeTypeCounterTest.java  OntologyNodeTypeCountsTest.java  OntologyTripleLoaderTest.java  OntologyTripleParserTest.java  PathUtilitiesTest.java  TripleTypeSetsTest.java
src/test/python/: ArangoDbUtilitiesTestCase.py  OntologyParserLoaderTestCase.py  test_ArangoDB.py  test_OntologyParserLoader.py
