[tool.poetry]
name = "cell-kn-mvp-etl-ontologies"
version = "0.1.0"
description = "Load ontologies into an ArangoDB instance"
authors = ["Raymond LeClair <raymond.leclair@springbok.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
lxml = ">=5.0"
python-arango = ">=7.4,<8.0.0"
rdflib = ">=7.0"
requests = ">=2.32"

[tool.poetry.group.dev.dependencies]
black = ">=24.4"
flake8 = ">=7.0"
ipython = ">=8.25"
jupyterlab = ">=4.2"
mypy = ">=1.10"
notebook = ">=7.2"
pylint = ">=3.2"
pytest = ">=8.2"
sphinx = ">=8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
